Python_Cheat_Sheet.txt
#Print-Prints a string into the console. 
print("Hello World")

#Input-Prints a string into the console, and asks the user for a string input.
input("What's your name")

#Comments-Adding a # symbol in font of text.The computer will ignore your comments.
#This is a comment
print("This is code")

#Variables-A variable give a name to a piece of data.Like a box with a label, it tells you what'sinside the box.
my_name = "Angela"
my_age = 12

#The += Operator-This is a convient way of saying: "take the previous value and add to it.
my_age = 12
my_age += 4
#my_age is now 16

#Integers-Integers are whole numbers. 
my_number = 354

#Floating Point Numbers-Floats are numbers with decimal places.
my_float = 3.14159

#Strings-A string is just a string of characters.It should be surrounded by double quotes.
my_string = "Hello"

#String Concatenation-You can add strings to string to create a new string. This is called concatenation.
"Hello" + "Angela"
#becomes "HelloAngela"

#Escaping a String-Because the double quote is special, it denotes a string, if you want to use it in a string, you need to escape it with a "\"
speech = "She said: \"Hi\""
print(speech)
#prints: She said: "Hi"

#Converting Data Types-You can convert a variable from 1 data type to another.
=Converting to float:
float()
=Converting to int:
int()
=Converting to string:
str()
n = 354
new_n = float(n)
print(new_n) #result 354.0

#Checking Data Types-You can use the type() function to check what is the data type of a particular variable.
n = 3.14159
type(n) #result float

#F-Strings-You can insert a variable into a string using f-strings.
days = 365
print(f"There are {days} in a year")

#The += Operator-This is a convenient way to modify a variable. It takes the existing value in a variable and adds to it.
my_number = 4
my_number += 2
#result is 6

#The Modulo Operator-The modulo does not give you the result of the division, just the remainder.
e.g. 4 รท 2 = 2 with no remainder
but 5 รท 2 = 2 with 1 remainder
5 % 2
#result is 1

#Arithmetic Operators
3+2 #Add
4-1 #Subtract
2*3 #Multiply
5/2 #Divide
5**2 #Exponent

#Name Error-This happens when there is a variablewith a name that the computer does not recognise. It's usually because you've misspelt the name of a variable you created earlier.
Note: variable names are case sensitive!
my_number = 4
my_Number + 2

#Zero Division Error-This happens when you try to divide by zero, This is something that is mathematically impossible so Python will also complain.
5 % 0

#Syntax Error-Syntax errors happen when your code does not make any sense to the computer.This can happen because you've misspelt something or there's too many brackets or a missing comma.
print(12 + 4))
print(12 + 4))
^
SyntaxError: unmatched ')'